--- a/local.env
+++ b/local.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://dcms:dcms@db/dcms
+DATABASE_URL=postgres://app:app@db/app
 CACHE_URL=redis://redis:6379/1
 SECRET_KEY="CHANGE_ME_NOW"
 DEBUG=YES
