--- a/prod-compose.yml
+++ b/prod-compose.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_DB=dcms
-      - POSTGRES_USER=dcms
-      - POSTGRES_PASSWORD=dcms
+      - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=app
   redis:
     image: "redis:alpine"
   web:
@@ -34,7 +34,7 @@ services:
     build:
       context: .
       dockerfile: prod.dockerfile
-    command: /bin/bash -c "cd dcms; exec celery -E -A dcms worker -l info"
+    command: /bin/bash -c "cd app; exec celery -E -A app worker -l info"
     depends_on:
       - db
       - redis
@@ -42,7 +42,7 @@ services:
     build:
       context: .
       dockerfile: prod.dockerfile
-    command: /bin/bash -c "cd dcms; exec celery -A dcms beat -l info --pidfile /tmp/celerybeat.pid -s /tmp/celerybeat-schedule"
+    command: /bin/bash -c "cd app; exec celery -A app beat -l info --pidfile /tmp/celerybeat.pid -s /tmp/celerybeat-schedule"
     depends_on:
       - db
       - redis
