--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 #
 --extra-index-url https://www.piwheels.org/simple
 
+django-allauth
 beautifulsoup4==4.6.0
 celery==4.3.0
 django-celery-beat==1.5.0
