--- a/prod-compose.yml
+++ b/prod-compose.yml
@@ -2,15 +2,17 @@ version: '3'
 
 services:
   db:
-    image: postgres:12.1
+    image: kartoza/postgis:12.0
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=app
       - POSTGRES_PASSWORD=app
+
   redis:
-    image: "redis:alpine"
+    image: redis:alpine
+
   web:
     build:
       context: .
@@ -22,6 +24,7 @@ services:
       - redis
       - web_nginx
     command: /bin/sh /code/run.sh
+
   web_nginx:
     build:
       context: .
@@ -29,23 +32,37 @@ services:
     ports:
       - "8058:8000"
     command: /code/prod-nginx.sh
-    # command: /bin/bash -c "/usr/sbin/nginx -c /code/nginx.conf -g 'daemon off;' >/dev/null 2>&1"
-  celery-workers:
+
+  celery_workers:
     build:
       context: .
       dockerfile: prod.dockerfile
-    command: /bin/bash -c "cd app; exec celery -E -A app worker -l info"
+    command: /bin/bash -c "cd app; DEBUG=False exec celery -E -A core worker -l info"
     depends_on:
       - db
       - redis
-  celery-beat:
+
+  celery_beat:
     build:
       context: .
       dockerfile: prod.dockerfile
-    command: /bin/bash -c "cd app; exec celery -A app beat -l info --pidfile /tmp/celerybeat.pid -s /tmp/celerybeat-schedule"
+    command: /bin/bash -c "cd app; DEBUG=False exec celery -A core beat -l info --pidfile /tmp/celerybeat.pid -s /tmp/celerybeat-schedule"
     depends_on:
       - db
       - redis
+
+  celery_flower:
+    build:
+      context: .
+      dockerfile: prod.dockerfile
+    ports:
+      - "5555:5555"
+    command: /bin/bash -c "cd app; DEBUG=False celery flower -A core"
+    depends_on:
+      - redis
+      - celery_workers
+      - celery_beat
+
 volumes:
   postgres_data:
 
